fix: show scrollbar for the sidebar

--- a/src/app/cv/builder/components/sidebar/sidebar.module.scss
+++ b/src/app/cv/builder/components/sidebar/sidebar.module.scss
@@ -3,7 +3,6 @@
     padding: 30px;
 
     overflow-y: auto;
-    scrollbar-width: none;
     background-color: #f9fafb;
 
     .title {
